--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,6 +1,6 @@
 {% extends "base.html"  %}
 {% block content %}
-
+<h4 class="light-blue-text text-darken-4 center-align">All Tasks</h4>
     <ul class="collapsible">
         {% for task in tasks %}
         <li>
@@ -15,6 +15,7 @@
             <div class="collapsible-body">
                 <strong>{{ task.category_name }}</strong>
                 <p>{{ task.task_description }}</p>
+                <p><em>by: {{ task.created_by }}</em></p>
         </li>
         {% endfor %}
     </ul>
